...

<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">

    <string name="optional">Optional</string>
    <string name="skip">Skip</string>

    <string name="md610_photometer">MD 610 Photometer</string>
    <string name="check_bluetooth_turned_on">Check that MD610 and its bluetooth are both turned on</string>
    <string name="to_turn_md610_on">To turn MD 610 on:</string>

    <string name="press_on_button"><![CDATA[Press (*on*)]]></string>
    <string name="press_mode_button"><![CDATA[Press (*mode*) to enter menu.]]></string>
    <string name="select_bluetooth"><![CDATA[Press (*down*) to scroll to Bluetooth and press (*enter*)]]></string>
...
    <string name="perform_test"><![CDATA[Perform <b>%1$s</b> test on MD 610 and press (*f3*) when ready.]]></string>
    <string name="select_correct_test"><![CDATA[Select the correct test and try again.]]></string>
    <string name="data_does_not_match">Received data does not match the expected test type.</string>
    <string name="invalid_data_received">Invalid data received</string>
    <string name="incorrect_test_selected">Incorrect test selected</string>
    <string name="select_test"><![CDATA[Select <b>%1$s</b> test on MD610]]></string>
    <string name="test_selected">Test Selected</string>
    <string name="to_select_test">Selecting the test</string>
    <string name="test_instructions">Test Instructions</string>

    <string name="select_test_instruction"><![CDATA[Press and hold (*shift*) + <b>%1$s</b> to select <b>%2$s</b> test and then press (*enter*)]]></string>
    <string name="select_diff_test_instruction"><![CDATA[Press and hold (*shift*) + <b>%1$s</b> to select <b>%2$s</b> test and press (*enter*). Select <b>\'diff\'</b> and then press (*enter*)]]></string>
    <string name="select_free_test_instruction"><![CDATA[Press and hold (*shift*) + <b>%1$s</b> to select <b>%2$s</b> test and press (*enter*). Select <b>\'free\'</b> and then press (*enter*)]]></string>
    <string name="select_Cr_VI_test_instruction"><![CDATA[Press and hold (*shift*) + <b>%1$s</b> to select <b>%2$s</b> test and press (*enter*). Select <b>\'Cr(VI)\'</b> and then press (*enter*)]]></string>
    <string name="select_Cr_III_VI_test_instruction"><![CDATA[Press and hold (*shift*) + <b>%1$s</b> to select <b>%2$s</b> test and press (*enter*). Select <b>\'Cr(III+VI)\'</b> and then press (*enter*)]]></string>
...
