...
    <string name="install_external_app">Please install the Akvo Flow app from your instance.</string>

    <!--Bluetooth-->
    <string name="nearby_devices">Nearby devices</string>
    <string name="connect_device">Connect to your device</string>
    <string name="to_turn_bluetooth_on">To turn bluetooth on:</string>
    <string name="connect">Connect</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="location_permission">Location permission is required for bluetooth connection</string>
    <string name="turn_location_on">To continue, turn on device location. Required for bluetooth connection</string>
    <string name="unknown_device">Unknown</string>
    <string name="scanning">Scanning for MD610 photometer…</string>

    <!--About Screen-->
...
