...
    tools:context=".sensor.usb.SensorTypeListActivity">

    <include layout="@layout/toolbar" />

    <ListView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/list_types"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/item_type" />

</LinearLayout>
